@@ -1,6 +1,8 @@
 kadu (1.3-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Removed hardcoded upstream version (1.0) from debian/build_kadu.sh
+    helper script
 
  -- Patryk Cisek <patryk@frodo.prezu.eu>  Sun, 28 Dec 2014 14:36:08 +0100
 
